# SYCL-fNIRS-motion-detection

./: README.md  matrix-multiply  parallel-for  sources.list.d
Yunyi-decision-tree/: CMakeLists.txt  Data.h  DecisionNode.cpp  DecisionNode.h  main.cpp
Yunyi-decision-tree-sycl/: CMakeLists.txt  Data.h  DecisionNode.cpp  DecisionNode.h  data.csv  main.cpp
build-arm/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  README  cmake_install.cmake
build-arm/examples/: CTestTestfile.cmake  Makefile  bnorm-u8-via-binary-postops-cpp  cmake_install.cmake  cnn-inference-f32-c  cnn-inference-f32-cpp  cnn-inference-int8-cpp  cnn-training-bf16-cpp  cnn-training-f32-cpp  cpu-cnn-training-f32-c  cpu-rnn-inference-f32-cpp  cpu-rnn-inference-int8-cpp  cpu-tutorials-matmul-matmul-quantization-cpp  cpu-tutorials-matmul-sgemm-and-matmul-cpp  getting-started-cpp  matmul-perf-cpp  memory-format-propagation-cpp  performance-profiling-cpp  primitives-augru-cpp  primitives-batch-normalization-cpp  primitives-binary-cpp  primitives-concat-cpp  primitives-convolution-cpp  primitives-eltwise-cpp  primitives-inner-product-cpp  primitives-layer-normalization-cpp  primitives-lrn-cpp  primitives-lstm-cpp  primitives-matmul-cpp  primitives-pooling-cpp  primitives-prelu-cpp  primitives-reduction-cpp  primitives-reorder-cpp  primitives-resampling-cpp  primitives-shuffle-cpp  primitives-softmax-cpp  primitives-sum-cpp  rnn-training-f32-cpp  tutorials-matmul-inference-int8-matmul-cpp
build-arm/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-arm/tests/: CTestTestfile.cmake  (+5 more)
(+153 files in other folders)
